Fix lookbehind regex for Safari. Slight cleanup of control styles.

--- a/src/web/App.css
+++ b/src/web/App.css
@@ -2,11 +2,6 @@ h1 {
   margin-top: 0;
 }
 
-select {
-  height: 21px;
-  width: 177px;
-}
-
 .hidden {
   display: none;
 }
